# memo-token

./: .gitignore  Anchor.toml  Cargo.toml  MEMO-BLOG-AUDIT.md  MEMO-BURN-AUDIT.md  MEMO-CHAT-AUDIT.md  MEMO-FORUM-AUDIT.md  MEMO-MINT-AUDIT.md  MEMO-PROFILE-AUDIT.md  MEMO-PROJECT-AUDIT.md  PROD-DEPLOYMENT.md  README.md  SELF-AUDIT.md  SYSTEM-DESIGN.md  deploy-testnet.sh  package.json  tsconfig.json
app/: Cargo.toml  index.html
app/src/: main.rs
clients/: Cargo.toml
clients-new/: Cargo.toml
clients-new/burn/src/: test-memo-burn.rs  test-memo-transfer.rs
clients/blog/src/: test-memo-blog-burn-for-blog.rs  test-memo-blog-create-blog.rs  test-memo-blog-mint-for-blog.rs  test-memo-blog-update-blog.rs
clients/burn/src/: check-memo-burn-user-global-burn-stats.rs  init-user-global-burn-stats.rs  test-memo-burn.rs  test-memo-transfer.rs  test-single-burn.rs
clients/chat/src/: admin-clear-burn-leaderboard.rs  admin-init-burn-leaderboard.rs  admin-init-global-group-counter.rs  check-memo-chat-burn-leaderboard.rs  check-memo-chat-statistics.rs  test-memo-chat-burn-for-group.rs  test-memo-chat-create-group.rs  test-memo-chat-send-memo.rs
clients/examples/: test_config.rs
clients/forum/src/: admin-init-global-post-counter.rs  test-memo-forum-burn-for-post.rs  test-memo-forum-create-post.rs  test-memo-forum-mint-for-post.rs
clients/memo-token/src/: admin-create-memo-token.sh  admin-transfer-memo-token-mint-authority.rs
clients/mint/src/: pen-test-memo-mint.rs  test-batch-mint.rs  test-memo-batch-mint-ascii.rs  test-memo-batch-mint.rs  test-memo-mint-base64-zstd.rs  test-memo-mint-base64.rs  test-memo-mint-to.rs  test-memo-mint-with-priority-fee.rs  test-memo-mint-without-cu.rs  test-memo-mint.rs
clients/misc/src/: pixel-canvas.html
clients/profile/src/: check-memo-profile.rs  test-memo-profile-create.rs  test-memo-profile-delete.rs  test-memo-profile-update.rs
clients/project/src/: admin-memo-project-init-burn-leaderboard.rs  admin-memo-project-init-global-project-counter.rs  check-memo-project-burn-leaderboard.rs  test-memo-project-burn-for-project.rs  test-memo-project-create-project.rs
clients/smoke-test/src/: smoke-test-memo-blog.rs  smoke-test-memo-burn-initialize.rs  smoke-test-memo-burn.rs  smoke-test-memo-chat.rs  smoke-test-memo-forum.rs  smoke-test-memo-mint.rs  smoke-test-memo-profile.rs  smoke-test-memo-project.rs
clients/src/: admin-transfer-memo-token-mint-authority.rs  burn.rs  check-global-burn-index.rs  check-global-top-burn-index.rs  check-latest-burn-index.rs  check-latest-burn-shard.rs  check-single-max-burn-shard.rs  check-social-profile.rs  check-top-burn-shard.rs  check-user-profile.rs  close-global-burn-index.rs  close-global-top-burn-index.rs  close-latest-burn-index.rs  close-latest-burn-shard.rs  close-latest-burn.rs  close-single-max-burn-shard.rs  close-social-profile.rs  close-storage.rs  close-top-burn-shard.rs  close-user-profile-burn-history.rs  close-user-profile.rs  config.rs  create-token.rs  create_token.rs  img2hex.rs  init-global-burn-index.rs  init-global-top-burn-index.rs  init-latest-burn-index.rs  init-latest-burn-shard.rs  init-latest-burn.rs  init-single-max-burn-shard.rs  init-social-profile.rs  init-storage.rs  init-token-account.rs  init-top-burn-shard.rs  init-user-profile-burn-history.rs  init-user-profile.rs  init.rs  lib.rs  mint-test.rs  (+9 more)
clients/top-burn-shard/src/: check-top-burn-shard.rs
legacy/clients-legacy/latest-burn-shard/src/: check-latest-burn-shard.rs  close-latest-burn-shard.rs
legacy/clients-legacy/mint/src/: test-perf-batch-mint.rs  test-single-mint.rs
legacy/clients-legacy/user-profile/src/: close-user-profile.rs
legacy/programs-legacy/memo-social/: Cargo.toml
legacy/programs-legacy/memo-social/src/: lib.rs
legacy/programs-legacy/memo-token/: Cargo.toml
metadata/: memo_token-metadata.json
programs/memo-blog/: Cargo.toml
programs/memo-blog/src/: lib.rs  tests.rs
programs/memo-burn/: Cargo.toml
programs/memo-burn/src/: lib.rs  tests.rs
programs/memo-chat/: Cargo.toml
programs/memo-chat/src/: lib.rs  tests.rs
programs/memo-forum/: Cargo.toml
programs/memo-forum/src/: lib.rs  tests.rs
programs/memo-mint/: Cargo.toml
programs/memo-mint/src/: lib.rs  tests.rs
programs/memo-profile/: Cargo.toml
programs/memo-profile/src/: lib.rs  tests.rs
programs/memo-project/: Cargo.toml
programs/memo-project/src/: lib.rs  tests.rs
programs/memo-social/: Cargo.toml
programs/memo-token/: Cargo.toml
programs/memo-token/src/: lib.rs
programs/memo-token/src/tests/: mod.rs
scripts/: close-programs.sh  deploy-common.sh  deploy-mainnet.sh  deploy-prod-staging-testnet.sh  deploy-testnet.sh  deploy.ts  generate-keypairs.sh  migrate-testnet-keypairs.sh  run-smoke-tests.sh  run-unit-tests.sh  setup-keypairs.sh
tests/: memo-token.rs  memo-token.ts  send_tx.rs
