[workspace]
members = [
    "programs/memo-token"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.14.1", features = ["full"] }

[package]
name = "memo-token-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "send_tx"
path = "tests/send_tx.rs"

[dependencies]
solana-client = "1.17.4"
solana-sdk = "1.17.4"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
clap = { version = "4.4.11", features = ["derive"] }
shellexpand = "3.1.0"
sha2 = "0.10.8"