[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
memo-token = { version = "0.1.0", path = "../programs/memo-token" }
solana-transaction-status = "1.18.26"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = { version = "=1.18.26" }
anchor-spl = "0.30.1"
shellexpand = "3.1.0"
spl-associated-token-account = "2.2.0"