[package]
name = "memo-burn-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-memo-burn"
path = "burn/src/test-memo-burn.rs"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.18.26"
spl-token-2022 = "3.0.5"
spl-associated-token-account = "2.2.0"
spl-memo = "4.0.0"
shellexpand = "3.1.0"
sha2 = "0.10.8"
serde_json = "1.0"
