[package]
name = "memo-token-test-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-memo-mint"
path = "mint/src/test-memo-mint.rs"

[[bin]]
name = "test-memo-batch-mint"
path = "mint/src/test-memo-batch-mint.rs"

[[bin]]
name = "test-memo-burn"
path = "burn/src/test-memo-burn.rs"

[[bin]]
name = "test-memo-transfer"
path = "burn/src/test-memo-transfer.rs"

[[bin]]
name = "admin-transfer-memo-token-mint-authority"
path = "memo-token/src/admin-transfer-memo-token-mint-authority.rs"

[dependencies]
solana-client = "^2"
solana-sdk = "^2"
solana-program = "^2"
solana-system-interface = "^1"
spl-token-2022 = "9.0.0"
spl-associated-token-account = "7.0.0"
spl-memo = "6.0.0"
shellexpand = "3.1.0"
sha2 = "0.10.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
