[package]
name = "memo-token-test-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "memo_token_client"
path = "src/lib.rs"

[[bin]]
name = "test-memo-mint"
path = "mint/src/test-memo-mint.rs"

[[bin]]
name = "test-memo-batch-mint-ascii"
path = "mint/src/test-memo-batch-mint-ascii.rs"

[[bin]]
name = "test-memo-mint-to"
path = "mint/src/test-memo-mint-to.rs"

[[bin]]
name = "test-memo-batch-mint"
path = "mint/src/test-memo-batch-mint.rs"

[[bin]]
name = "test-memo-mint-base64"
path = "mint/src/test-memo-mint-base64.rs"

[[bin]]
name = "test-memo-mint-base64-zstd"
path = "mint/src/test-memo-mint-base64-zstd.rs"

[[bin]]
name = "pen-test-memo-mint"
path = "mint/src/pen-test-memo-mint.rs"

[[bin]]
name = "test-memo-mint-with-priority-fee"
path = "mint/src/test-memo-mint-with-priority-fee.rs"

[[bin]]
name = "test-memo-mint-without-cu"
path = "mint/src/test-memo-mint-without-cu.rs"

[[bin]]
name = "init-user-global-burn-stats"
path = "burn/src/init-user-global-burn-stats.rs"

[[bin]]
name = "check-memo-burn-user-global-burn-stats"
path = "burn/src/check-memo-burn-user-global-burn-stats.rs"

[[bin]]
name = "test-memo-burn"
path = "burn/src/test-memo-burn.rs"

[[bin]]
name = "admin-transfer-memo-token-mint-authority"
path = "memo-token/src/admin-transfer-memo-token-mint-authority.rs"

[[bin]]
name = "admin-init-global-group-counter"
path = "chat/src/admin-init-global-group-counter.rs"

[[bin]]
name = "admin-init-burn-leaderboard"
path = "chat/src/admin-init-burn-leaderboard.rs"

[[bin]]
name = "test-memo-chat-create-group"
path = "chat/src/test-memo-chat-create-group.rs"

[[bin]]
name = "check-memo-chat-statistics"
path = "chat/src/check-memo-chat-statistics.rs"

[[bin]]
name = "check-memo-chat-burn-leaderboard"
path = "chat/src/check-memo-chat-burn-leaderboard.rs"

[[bin]]
name = "test-memo-chat-send-memo"
path = "chat/src/test-memo-chat-send-memo.rs"

[[bin]]
name = "test-memo-chat-burn-for-group"
path = "chat/src/test-memo-chat-burn-for-group.rs"

[[bin]]
name = "test-memo-profile-create"
path = "profile/src/test-memo-profile-create.rs"

[[bin]]
name = "test-memo-profile-update"
path = "profile/src/test-memo-profile-update.rs"

[[bin]]
name = "test-memo-profile-delete"
path = "profile/src/test-memo-profile-delete.rs"

[[bin]]
name = "check-memo-profile"
path = "profile/src/check-memo-profile.rs"

[[bin]]
name = "admin-memo-project-init-global-project-counter"
path = "project/src/admin-memo-project-init-global-project-counter.rs"

[[bin]]
name = "admin-memo-project-init-burn-leaderboard"
path = "project/src/admin-memo-project-init-burn-leaderboard.rs"

[[bin]]
name = "check-memo-project-burn-leaderboard"
path = "project/src/check-memo-project-burn-leaderboard.rs"

[[bin]]
name = "test-memo-project-create-project"
path = "project/src/test-memo-project-create-project.rs"

[[bin]]
name = "test-memo-project-burn-for-project"
path = "project/src/test-memo-project-burn-for-project.rs"

[[bin]]
name = "smoke-test-memo-mint"
path = "smoke-test/src/smoke-test-memo-mint.rs"

[[bin]]
name = "smoke-test-memo-burn"
path = "smoke-test/src/smoke-test-memo-burn.rs"

[[bin]]
name = "smoke-test-memo-profile"
path = "smoke-test/src/smoke-test-memo-profile.rs"

[[bin]]
name = "smoke-test-memo-project"
path = "smoke-test/src/smoke-test-memo-project.rs"

[[bin]]
name = "smoke-test-memo-chat"
path = "smoke-test/src/smoke-test-memo-chat.rs"

[[bin]]
name = "smoke-test-memo-blog"
path = "smoke-test/src/smoke-test-memo-blog.rs"

# Blog client binaries
[[bin]]
name = "test-memo-blog-create-blog"
path = "blog/src/test-memo-blog-create-blog.rs"

[[bin]]
name = "test-memo-blog-update-blog"
path = "blog/src/test-memo-blog-update-blog.rs"

[[bin]]
name = "test-memo-blog-burn-for-blog"
path = "blog/src/test-memo-blog-burn-for-blog.rs"

[[bin]]
name = "test-memo-blog-mint-for-blog"
path = "blog/src/test-memo-blog-mint-for-blog.rs"

[dependencies]
solana-client = "^2"
solana-sdk = "^2"
solana-program = "^2"
solana-system-interface = "^1"
spl-token-2022 = "9.0.0"
spl-associated-token-account = "7.0.0"
spl-memo = "6.0.0"
shellexpand = "3.1.0"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
borsh = "0.10.4"
hex = "0.4"
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5.0"
zstd = "0.13"