[package]
name = "memo-blog"
version = "0.1.0"
description = "MEMO Blog Contract - Create and manage blogs with MEMO token operations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memo_blog"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
mainnet = ["memo-burn/mainnet", "memo-mint/mainnet"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
spl-memo = "6.0"
base64 = "0.22"
bs58 = "0.5.1"
memo-burn = { path = "../memo-burn", features = ["cpi"] }
memo-mint = { path = "../memo-mint", features = ["cpi"] }
