[package]
name = "memo-burn"
version = "0.1.0"
description = "Simplified memo burn contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memo_burn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.26"
serde_json = "1.0"