[package]
name = "memo-chat"
version = "0.1.0"
description = "Chat contract that mints tokens via memo-mint"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memo_chat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
memo-mint = { path = "../memo-mint", features = ["cpi"] }
memo-burn = { path = "../memo-burn", features = ["cpi"] }
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
spl-memo = "6.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
bs58 = "0.5.1"
base64 = "0.22"
