[package]
name = "memo-social"
version = "0.1.0"
description = "Memo Social Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memo_social"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.26"
